--- a/ISSUE_TEMPLATE/bug_report.yml
+++ b/ISSUE_TEMPLATE/bug_report.yml
@@ -1,66 +1,136 @@
 name: Bug Report
-description: Report a bug or unexpected behavior
-title: "[Bug]: "
-labels: ["bug", "needs-triage"]
+description: Report a bug or issue
+title: "[BUG]: "
+labels: ["bug"]
+assignees: []
 body:
-  - type: markdown
+  - type: input
+    id: summary
     attributes:
-      value: |
-        Thanks for taking the time to report this bug! Please fill out the information below to help us resolve it.
+      label: 🐛 Bug Summary
+      description: One-line summary of the bug
+      placeholder: e.g., Users can't login on mobile after session timeout
+    validations:
+      required: true
 
-  - type: textarea
-    id: description
+  - type: dropdown
+    id: severity
     attributes:
-      label: Description
-      description: A clear and concise description of the bug
-      placeholder: What happened?
+      label: 🔴 Severity
+      options:
+        - Critical (System down, data loss, security breach)
+        - High (Major feature broken, no workaround)
+        - Medium (Feature impaired, workaround exists)
+        - Low (Minor issue, cosmetic)
+    validations:
+      required: true
+
+  - type: input
+    id: user-role
+    attributes:
+      label: 👤 User Role/Permissions
+      description: What role does the affected user have?
+      placeholder: e.g., Admin, Basic User, Premium User
+    validations:
+      required: true
+
+  - type: checkboxes
+    id: platforms
+    attributes:
+      label: 📱 Affected Platforms
+      options:
+        - label: Backend API
+        - label: Web - Chrome
+        - label: Web - Firefox
+        - label: Web - Safari
+        - label: iOS
+        - label: Android
+
+  - type: dropdown
+    id: environment
+    attributes:
+      label: 🌍 Environment
+      options:
+        - Production
+        - Staging
+        - Development
+        - Local
     validations:
       required: true
 
   - type: textarea
-    id: reproduction
+    id: steps
     attributes:
-      label: Steps to Reproduce
-      description: Steps to reproduce the behavior
+      label: 🔄 Steps to Reproduce
+      description: Clear steps to reproduce the issue
       placeholder: |
-        1. Go to '...'
-        2. Click on '...'
-        3. See error
+        1. Login as [role]
+        2. Navigate to...
+        3. Click on...
+        4. See error
     validations:
       required: true
 
   - type: textarea
     id: expected
     attributes:
-      label: Expected Behavior
-      description: What did you expect to happen?
+      label: ✅ Expected Behavior
+      description: What should happen?
     validations:
       required: true
 
   - type: textarea
     id: actual
     attributes:
-      label: Actual Behavior
-      description: What actually happened?
+      label: ❌ Actual Behavior
+      description: What actually happens?
     validations:
       required: true
 
   - type: textarea
-    id: environment
+    id: permission-check
     attributes:
-      label: Environment
-      description: Please provide relevant environment details
-      placeholder: |
-        - OS: [e.g. macOS 13.0]
-        - Browser: [e.g. Chrome 120]
-        - Version: [e.g. 1.2.3]
-    validations:
-      required: false
+      label: 🔐 Permission-Related Questions
+      description: Help us understand if this is permission-related
+      value: |
+        - Is this bug role-specific? 
+        - Does it work for other roles? 
+        - Is it denying access that should be allowed? 
+        - Is it allowing access that should be denied?
 
   - type: textarea
-    id: additional
+    id: logs
     attributes:
-      label: Additional Context
-      description: Add any other context, screenshots, or logs about the problem
-    validations:
-      required: false
+      label: 📋 Error Messages/Logs
+      description: Any console errors, network responses, or logs
+      render: shell
+
+  - type: textarea
+    id: screenshots
+    attributes:
+      label: 📸 Screenshots/Videos
+      description: Drag and drop images or videos here
+
+  - type: input
+    id: screen-recording
+    attributes:
+      label: 🎥 Screen Recording Link
+      description: Link to Loom, CleanShot, or other screen recording demonstrating the bug
+      placeholder: https://www.loom.com/share/...
+
+  - type: dropdown
+    id: reproducibility
+    attributes:
+      label: 🔄 Reproducibility
+      options:
+        - Always (100%)
+        - Often (75%)
+        - Sometimes (50%)
+        - Rarely (25%)
+        - Cannot reproduce
+
+  - type: textarea
+    id: workaround
+    attributes:
+      label: 🔧 Workaround
+      description: Is there a temporary workaround?
