fixing issues with bug template

--- a/workflow-templates/add-to-project.properties.json
+++ b/workflow-templates/add-to-project.properties.json
@@ -1,7 +1,8 @@
 {
-  "name": "Add Issues to Organization Project",
-  "description": "Automatically add new issues to the ClosureAI organization project",
-  "iconName": "project",
-  "categories": ["Automation"]
+    "name": "Add Issues to Organization Project",
+    "description": "Automatically add new issues to the ClosureAI organization project",
+    "iconName": "project",
+    "categories": [
+        "Automation"
+    ]
 }
-
