added missing description field

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -3,6 +3,7 @@ name: Bug Report
 title: "[BUG] "
 labels: ["bug"]
 assignees: []
+description: Report a bug or issue (no new features, only bugs)
 
 body:
   - type: input
